test/analyze/match/all_patterns.exp
Error: Inexhaustive pattern matching. For example the pattern `Tup2 _` is not matched.
test/analyze/match/all_patterns.myte:9:6-18
 9 |   val Tup1 (x | x) = Tup1 (1);
   |       ^^^^^^^^^^^^

Error: Unreachable pattern
test/analyze/match/all_patterns.myte:9:16
 9 |   val Tup1 (x | x) = Tup1 (1);
   |                 ^

Error: Inexhaustive pattern matching. For example the pattern `Tup2 _` is not matched.
test/analyze/match/all_patterns.myte:15:2-14
 15 |   Tup1 (x | x) = Tup1 (y);
    |   ^^^^^^^^^^^^

Error: Unreachable pattern
test/analyze/match/all_patterns.myte:15:12
 15 |   Tup1 (x | x) = Tup1 (y);
    |             ^

Error: Inexhaustive pattern matching. For example the pattern `Tup2 _` is not matched.
test/analyze/match/all_patterns.myte:19:7-19
 19 |   for (Tup1 (x | x) in [Tup1 (1)]) {}
    |        ^^^^^^^^^^^^

Error: Unreachable pattern
test/analyze/match/all_patterns.myte:19:17
 19 |   for (Tup1 (x | x) in [Tup1 (1)]) {}
    |                  ^

Error: Inexhaustive pattern matching. For example the pattern `Tup2 _` is not matched.
test/analyze/match/all_patterns.myte:23:10-25:3
 23 | /   var x = match (Tup1 (1)) {
    | |           ^^^^^^^^^^^^^^^^^^
 24 | |     | Tup1 (x | x) -> 1
    | | ^^^^^^^^^^^^^^^^^^^^^^^
 25 | |   };
    | \ ^^^

Error: Unreachable pattern
test/analyze/match/all_patterns.myte:24:16
 24 |     | Tup1 (x | x) -> 1
    |                 ^

Error: Inexhaustive pattern matching. For example the pattern `Tup2 _` is not matched.
test/analyze/match/all_patterns.myte:27:6-29:3
 27 | /   x = match (Tup1 (1)) {
    | |       ^^^^^^^^^^^^^^^^^^
 28 | |     | Tup1 (x | x) -> 1
    | | ^^^^^^^^^^^^^^^^^^^^^^^
 29 | |   };
    | \ ^^^

Error: Unreachable pattern
test/analyze/match/all_patterns.myte:28:16
 28 |     | Tup1 (x | x) -> 1
    |                 ^