test/analyze/match/all_patterns.myte
module test

type Variant =
  | Tup1 (Int)
  | Tup2 (Int)

fun testVariableDeclarationPatterns() {
  // Exhaustiveness and reachability errors
  val Tup1 (x | x) = Tup1 (1);
}

fun testAssignmentPatterns() {
  var (x, y) = (1, 2);
  // Exhaustiveness and reachability errors
  Tup1 (x | x) = Tup1 (y);
}

fun testForLoopPatterns() {
  for (Tup1 (x | x) in [Tup1 (1)]) {}
}

fun matchExpressionInPatternStatement() {
  var x = match (Tup1 (1)) {
    | Tup1 (x | x) -> 1
  };

  x = match (Tup1 (1)) {
    | Tup1 (x | x) -> 1
  };
}

fun main() {}